syntax = "proto2";
package msg;

message IpHost { 
    optional string ip = 1;
    optional int32  port = 2;
}

// 房间信息
//message MatchRoomInfo {
//    optional string server = 1;
//    optional int64 roomid = 2;
//}

// 道具id规则 = 类型 * 10000 + 顺序号
enum ItemId {
    YuanBao = 60001;            // 元宝
    Diamond = 60002;            // 钻石
    Gold = 60003;               // 金币
    FreeStep = 60005;           // 免费步数
    Strength = 60006;           // 体力
    RedDiamond = 100001;        // 红包钻石
    RedDiamondParts = 100002;   // 红包钻石碎片
}

enum ItemType {
    Normal          = 0;    // 普通道具
    Digital         = 1;    // 数码产品
    ShoppingCard    = 2;    // 购物卡
    DailyUse        = 3;    // 生活用品
    Toy             = 4;    // 玩具
    MobileCard      = 5;    // 电话卡
    Currency        = 6;    // 货币
    CarAccessory    = 7;    // 汽车用品
    Advertisement   = 8;    // 广告
    Smallware       = 9;    // 小商品
    DiamondItem     = 10;   // 钻石道具
    ClothesParts    = 11;   // 时装配件
    HouseParts      = 12;   // 房子配件
    CarParts        = 13;   // 车子配件
    MaidParts       = 14;   // 仆人配件
    ClothesItem     = 15;   // 时装道具
}

message PairNumItem {
    optional uint32 itemid = 1;
    optional uint32 num = 2;
}

enum TaskId {
    RegistAccount       = 1001; // 自己注册账户(服务器使用)
    RegisterTopScore    = 1002; // 达到目标分数
    InviteeTopScore     = 1003; // 被邀请人达到目标分数
    InviteRegist        = 1004; // 邀请注册
}

// 道具位置定义
enum ItemPos {
    Bag = 0;        // 默认背包
    Helmet = 1;     // 头部
    Clothes = 2;    // 衣服
    Pants = 3;      // 裤子
    Shoe = 4;       // 鞋子
    Hand = 5;       // 手持装饰
    Wing = 6;       // 翅膀
    Suit = 7;       // 套装
    LongClothes = 8;    // 裙子/长衣
}

// 房子访问类型
enum HouseVisitType {
    TakeMoney = 1;      // 收取房子金币
    RobMoney = 2;       // 掠夺房子金币
    RobMaid = 5;        // 掠夺女仆
    TakeBackMaid = 6;   // 领回女仆
}

// 地图事件类型
enum MapEventType {
    Game = 1;       // 游戏
    Bonus = 2;      // 奖励 
    Building = 3;   // 建筑
}

// 地图事件定义id
enum MapEventId {
    GameTanTanLe = 1001;        // 弹弹乐
    GameSuperMarket = 1002;     // 超市钩物
    GameFanFanLe = 1003;        // 红包翻翻乐
    BonusGold = 2001;           // 随机奖励金币
    BonusStrength = 2002;       // 随机奖励体力
    BuildingMaidShop = 3001;    // 女仆商店
    BuildingCarShop = 3002;     // 汽车配件商店
    BuildingHouseShop = 3003;   // 房屋升级碎片商店
}

enum Sex {
    Female = 0;
    Male = 1;
    Neutral = 2;
}

enum MoneyType {
    _Gold = 1;          // 金币
    _Diamond = 2;       // 钻石
    _Strength = 3;      // 体力
    _Item = 4;          // 道具
}

enum CarOperatorType {
    Park = 1;
    TakeBack = 2;
    Ticket = 3;
    AutoBack = 4;
}

enum ParkingType {
    Public = 1;
    Private = 2;
}

enum CarPartType {
    Tyre = 1;           //轮胎
    Tank = 2;           //油箱
    Trunk = 3;          //后备箱
    Engine = 4;         //发动机
    Battery = 5;        //电瓶
}

enum CarState {
    Ready = 2;          //上了自己的车位 可以出征
    Parking = 3;        //停在公共车位上 等待着收益
    Exped = 4;          //出征的路上
    Robbing = 5;        //抢夺中
    Back = 6;           //回城中
}

//人物社交信息
message PersonSocialInfo {
	optional uint64 id = 1;   		
	optional string face = 2;
	optional string name = 3;
	optional int32  sex = 4;
	optional uint32 level = 5;
	optional uint32 age = 6;
	optional uint32 constellation = 7; //星座
	optional float lng = 8; 	 //经度
	optional float lat = 9;	 //纬度
	optional string sign = 10; //个人签名
	optional uint32 province = 11; //省
	optional uint32 city = 12; //市
}

//常用的key-value结构
message CommonKeyValue {
	optional uint32 key = 1;
	optional uint32 value = 2;
}
