// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TParkingBase
message TParkingBase
{	
	
	
	repeated TParkingDefine TParking = 1; // TParking

}

// Defined in table: TParking
message TParkingDefine
{	
	
	
	optional uint32 Id = 1; // ID
	
	
	optional uint32 Type = 2; // 类型(1 公共 2 普通)
	
	
	optional uint32 RewardPercent = 3; // 收入百分比

}

